        - BUGFIX: Parsing of a CSSValue like ``red /**/`` (value, Space, comment) fixed.
        - BUGFIX: Parsing values with ``+`` operator fixed.
        - BUGFIX: ``CSSValueList.__str__`` added (missing last underscore rendered it useless)
        - IMPROVEMENT: Comments should be parsed much better now
        - fixed lots of other minor bugs related to CSSValue

    - BUGFIX: Other priority values than ``!important`` are parsed now. Nevertheless they log an ERROR or raise a SyntaxErr.
        **TODO**: Preference setting. Profile?

    - BUGFIX: Fixed Issue #14, added ``CSSStyleDeclaration().borderLeftWidth``. But prefer to use ``CSSStyleDeclaration()['border-left.width']``.

    + FEATURE (strange): IE only CSS expressions *should* be parsed and serialized now. I have not tested this deeply and there may be problems but for some common cases this should work, e.g. for hacking maxwidth for IE you may define the following::

        width: expression(document.body.clientWidth > 1000 ? "1000px": "100%")

        Usage of CSS expressions is strongly discouraged as they do not validate AND may slow down the rendering and browser quite a lot!

0.9.5
-----
0.9.5.1 080811
    + **BUGFIX**: Fixed parsing of ``}a,b`` which resulted in TypeError until now.

    + **BUGFIX**: A rule with a selector using an undefined and therefor invalid namespace prefix is ignored now.

    + **BUGFIX**: Removed typo in MediaList which resulted in Exception when parsing medialist containing ``all`` and another media.

    + **BUGFIX**: Reading imported styles may have failed under certain conditions with an AttributeError.

    + FEATURE: Added ``cssutils.VERSION`` which is the current release version, in this case e.g. ``"0.9.5.1"``

    + IMPROVEMENT: Optimized imports and partly removed circular ones which are a bit tricky...

0.9.5 080730